--- a/contact.html
+++ b/contact.html
@@ -157,12 +157,15 @@
     </h4>
     <div class="social-box">
       <a href="https://www.instagram.com/sweetmeal___/">
-        <img src="images/instagram-removebg-preview.png" alt="" width="100px">
+        <img src="images/instagram-removebg-preview.png" alt="" width="50px">
+      </a> 
+      <a href="https://shopee.co.id/rifany28?is_from_login=true">
+        <img src="images/Shopee-logo-removebg-preview.png" alt="" width="50px">
       </a> 
     </div>
   </div>
   <p>
-    &copy; 2024 all by Sweet Meal
+    &copy; 2024 All Sweet Meal
     <a href="https://html.design/"></a>
   </p>
 </section>
