--- a/food.html
+++ b/food.html
@@ -226,7 +226,10 @@
       </h4>
       <div class="social-box">
         <a href="https://www.instagram.com/sweetmeal___/">
-          <img src="images/instagram-removebg-preview.png" alt="" width="100px">
+          <img src="images/instagram-removebg-preview.png" alt="" width="50px">
+        </a> 
+        <a href="https://shopee.co.id/rifany28?is_from_login=true">
+          <img src="images/Shopee-logo-removebg-preview.png" alt="" width="50px">
         </a> 
       </div>
     </div>
